--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="bg-slide slide-3">
             <div class="content">
-                <h1>Reception</h1>
+                <h1>RECEPTION</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident porro, est accusamus ea mollitia obcaecati earum ipsam ratione a. Temporibus veniam nihil blanditiis consectetur exercitationem. Illum iste reprehenderit magnam sequi facilis fugit tempore explicabo minus odio cupiditate fugiat neque quae, ab facere vel unde nobis volup
                 </p>
             </div>
